--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         </div>
     </div>
 
-    <!-- jquery -->
-    <!-- popper -->
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/popper.js/dist/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
