--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h2>Technologies used</h2>
 
                 <div class="row">
-                    <div class="col-md-6 col-lg-3">
+                    <div class="col-md-6">
                         <h3>Java</h3>
 
                         <ul>
@@ -36,7 +36,7 @@
                             <li>JUnit</li>
                         </ul>
                     </div>
-                    <div class="col-md-6 col-lg-3">
+                    <div class="col-md-6">
                         <h3>.NET</h3>
 
                         <ul>
@@ -49,7 +49,7 @@
                             <li>.NET Core</li>
                         </ul>
                     </div>
-                    <div class="col-md-6 col-lg-3">
+                    <div class="col-md-6">
                         <h3>Web development</h3>
 
                         <ul>
@@ -67,7 +67,7 @@
                             <li>Sweet Alert</li>
                         </ul>
                     </div>
-                    <div class="col-md-6 col-lg-3">
+                    <div class="col-md-6">
                         <h3>Database design and programming</h3>
 
                         <ul>
