Update october 1st 2021

--- a/index.html
+++ b/index.html
@@ -24,18 +24,9 @@
 
                 <p>Official webpage of colombian developer David Rivas</p>
 
-                <h2>Technologies used</h2>
+                <h2>Technologies worked</h2>
 
                 <div class="row">
-                    <div class="col-md-6">
-                        <h3>Java</h3>
-
-                        <ul>
-                            <li>Java 8</li>
-                            <li>JavaServer Faces (JSF)</li>
-                            <li>JUnit</li>
-                        </ul>
-                    </div>
                     <div class="col-md-6">
                         <h3>.NET</h3>
 
@@ -47,6 +38,8 @@
                             <li>Xamarin.Forms</li>
                             <li>Entity Framework</li>
                             <li>.NET Core</li>
+                            <li>Entity Framework</li>
+                            <li>Identity Server</li>
                         </ul>
                     </div>
                     <div class="col-md-6">
@@ -76,19 +69,40 @@
                             <li>DB2</li>
                         </ul>
                     </div>
+                    <div class="col-md-6">
+                        <h3>Others</h3>
+
+                        <ul>
+                            <li>Java 8</li>
+                            <li>JavaServer Faces (JSF)</li>
+                            <li>JUnit</li>
+                            <li>Azure</li>
+                            <li>Elasticsearch</li>
+                            <li>RabbitMQ</li>
+                            <li>Python</li>
+                            <li>Micropython</li>
+                        </ul>
+                    </div>
                 </div>
 
-                <!-- <h2>Projects made</h2> -->
+                <h2>Projects made</h2>
+
+                <ul>
+                    <li><a href="https://github.com/davrivas/liquid_temperature" target="_blank">Liquid Temperature (Micropython)</a></li>
+                    <li><a href="https://github.com/davrivas/simu" target="_blank">SIMU (JavaServer Faces)</a></li>                    
+                    <li><a href="https://github.com/davrivas/Edu.SenaCsf.LoaniumDesktop" target="_blank">Loanium Desktop (Windows Forms)</a></li>
+                    <li><a href="https://github.com/davrivas/Biblioteca-Interactiva" target="_blank">Biblioteca interactiva (PHP)</a></li>
+                </ul>
 
                 <h2>Networks</h2>
 
                 <ul>
+                    <li>
+                        <i aria-hidden="true" class="fa fa-envelope"></i> <a href="mailto:d.rivas95@hotmail.com" title="Send me an email!">d.rivas95@hotmail.com</a>
+                    </li>
                     <li><a href="https://www.linkedin.com/in/davrivas" target="_blank">LinkedIn</a></li>
                     <li><a href="https://github.com/davrivas" target="_blank">GitHub</a></li>
-                    <li>
-                        <span class="fa fa-envelope"></span> <a
-                            href="mailto:d.rivas95@hotmail.com" title="Send me an email!">d.rivas95@hotmail.com</a>
-                    </li>
+					<li><a href="https://codepen.io/davrivas" target="_blank">Codepen</a></li>
                 </ul>
             </div>
         </div>
