--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="row p-2">
-            <div class="col-md-4 pt-1">
+            <div class="col-md-4 pt-1 d-flex justify-content-center align-items-start">
                 <img src="images/photo.jpg" class="img-fluid" alt="David Rivas photo" id="photo">
             </div>
 
