--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row p-2">
             <div class="col-md-4 pt-1 d-flex justify-content-center align-items-start">
-                <img src="images/photo.jpg" class="img-fluid" alt="David Rivas photo" id="photo">
+                <img src="images/photo.png" class="img-fluid" alt="David Rivas photo" id="photo">
             </div>
 
             <div class="col-md-8 pt-3">
