--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
                 <ul>
                     <li>
-                        <i aria-hidden="true" class="fa fa-envelope"></i> <a href="mailto:d.rivas95@hotmail.com" title="Send me an email!">d.rivas95@hotmail.com</a>
+                        <i aria-hidden="true" class="fa fa-envelope"></i> <a href="mailto:davrivas1995@gmail.com" title="Send me an email!">davrivas1995@gmail.com</a>
                     </li>
                     <li><a href="https://www.linkedin.com/in/davrivas" target="_blank">LinkedIn</a></li>
                     <li><a href="https://github.com/davrivas" target="_blank">GitHub</a></li>
