Update technology stack and images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>David Rivas (davrivas) developer site</title>
-    <link rel="shortcut icon" href="images/favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="vendor/fontawesome-free-5.8.2-web/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row p-2">
             <div class="col-md-4 pt-1 d-flex justify-content-center align-items-start">
-                <img src="images/photo.png" class="img-fluid" alt="David Rivas photo" id="photo">
+                <img src="images/photo.jpeg" class="img-fluid" alt="David Rivas photo" id="photo">
             </div>
 
             <div class="col-md-8 pt-3">
@@ -40,6 +40,7 @@
                             <li>.NET Core</li>
                             <li>Entity Framework</li>
                             <li>Identity Server</li>
+                            <li>NUnit</li>
                         </ul>
                     </div>
                     <div class="col-md-6">
@@ -58,6 +59,7 @@
                             <li>Angular +2</li>
                             <li>Toastr</li>
                             <li>Sweet Alert</li>
+                            <li>React</li>
                         </ul>
                     </div>
                     <div class="col-md-6">
@@ -76,9 +78,21 @@
                             <li>Java 8</li>
                             <li>JavaServer Faces (JSF)</li>
                             <li>JUnit</li>
-                            <li>Azure</li>
+                            <li>Microsoft Azure
+                                <ul>
+                                    <li>Azure App Service</li>
+                                    <li>Azure Service Bus</li>
+                                    <li>Azure AD B2C</li>
+                                    <li>Azure Blob Storage</li>
+                                    <li>Azure Application Insights</li>
+                                    <li>Azure Functions</li>
+                                    <li>Azure SQL Database</li>
+                                    <li>Azure Cosmos DB</li>
+                                </ul>
+                            </li>
                             <li>Elasticsearch</li>
-                            <li>RabbitMQ</li>
+                            <li>RabbitMQ</li>                            
+                            <li>Masstransit</li>
                             <li>Python</li>
                             <li>Micropython</li>
                         </ul>
